[package]
name = "libloading_helper"
version = "0.4.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
libloading = "0.8.0"
libloading_helper_macro = { version = "0.1.0", path = "libloading_helper_macro" }

[workspace]
members = ["libloading_helper_macro", "tests"]

[workspace.package]
edition = "2021"
authors = ["ZB_陈 <949536395@qq.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ZB94/libloading_helper"
description = "libloading helper"
